Remove node_modules

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue.js E-commerce</title>
+    <title>Image Upload VueJS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   	<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="animate.css" type="text/css" rel="stylesheet">
+    <link href="main.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
 
@@ -15,7 +15,6 @@
     <script src="/dist/build.js"></script>
   </body>
 
-<script src="https://js.stripe.com/v3/"></script>
 <script src="jquery/jquery-3.1.1.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </html>
