--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Image Upload VueJS</title>
+    <title>Image Uploader Vue.JS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   	<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="main.css" type="text/css" rel="stylesheet">
